--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -27,7 +27,7 @@
                 <!-- 로고, 처음으로 영역 -->
                 <div class="header-left">
                     <div class="logo">
-                        <img class="logo-image" src="/static/images/logo2.png">
+                        <img class="logo-image" src="/static/images/logo.png">
                     </div>
                     <div class="home">
                         <i class="fa-solid fa-house icon"></i>
