--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -26,6 +26,7 @@
     border-bottom: 1px solid black;
     width: 100%;
     height: 10%;
+    background-color: #27534c;
 }
 
 /* 홈 버튼 */
@@ -41,7 +42,7 @@
 .logout-icon {
     font-size: 60px;
     cursor: pointer;
-    color: black;
+    color: white;
 }
 
 /* 로고 영역 */
@@ -55,6 +56,7 @@
 
 .logo h2 {
     font-size: 40px;
+    color: white;
 }
 
 
@@ -205,7 +207,7 @@
     font-size: 17px;
     text-decoration: none;
     color: white;
-    background-color: black;
+    background-color: #27534c;
 }
 
 /* 상품 메인 영역 */
