--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -116,7 +116,7 @@
     width: 100%;
     height: 10%;
 
-    /* background-color: #ac6730; */
+    background-color: #e9e9e969;
 }
 
 .category {
@@ -193,6 +193,7 @@
     border: 2px solid black;
     width: 20%;
     padding: 0px 5px;
+    box-shadow: 1px 1px 0 rgba(117, 116, 116, 0.5);
     cursor: pointer;
     background-color: #fefefe;
 }
@@ -240,7 +241,7 @@
     width: 100%;
     height: 25%;
 
-    /* background-color: #27534c; */
+    background-color: #e9e9e969;
 }
 
 
@@ -252,7 +253,7 @@
     border-radius: 5px;
     width: 60%;
     height: 80%;
-    background-color: #fefefe;
+    background-color: white;
 }
 
 .menu-info {
@@ -315,18 +316,20 @@
     border-radius: 5px;
     width: 30%;
     height: 80%;
-    /* background-color: #fefefe; */
+    background-color: #fefefe;
 }
 
 .total-price-title {
     display: flex;
     align-items: center;
+    margin-left: 15px;
     width: 100%;
     height: 20%;
-    padding-left: 10px;
     font-size: 24px;
     font-weight: 600;
 }
+
+
 
 .total-price-amount {
     display: flex;
