--- a/src/main/resources/static/css/payment/paymentOption.css
+++ b/src/main/resources/static/css/payment/paymentOption.css
@@ -48,17 +48,7 @@
     /* background-color: aquamarine; */
 }
 
-.credit-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 43%;
-    height: 100%;
-    border: 2px solid black;
-    border-radius: 5px;
-}
-
+.credit-card,
 .cash {
     display: flex;
     flex-direction: column;
@@ -68,19 +58,49 @@
     height: 100%;
     border: 2px solid black;
     border-radius: 5px;
-    background-color: rgba(255, 255, 51, 0.8);
+    box-shadow: 1px 1px 0 rgba(117, 116, 116, 0.5);
+}
+
+.credit-card-icon,
+.cash-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 75%;
+}
+
+.credit-card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 25%;
+    font-size: 50px;
+    color: white;
+    background-color: #27534c;
+}
+
+.cash-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 25%;
+    font-size: 50px;
+    color: white;
+    background-color: rgb(244, 56, 56);
 }
 
 .icon {
-    font-size: 100px;
+    font-size: 160px;
 }
 
-.payment-content {
-    padding-top: 20px;
-    font-size: 50px;
-}
 
-.backButton {
+.back-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,8 +108,13 @@
     border-radius: 5px;
     margin-top: 50px;
     width: 93%;
-    height: 5%;
-
+    height: 7%;
     font-size: 50px;
+    box-shadow: 1px 1px 0 rgba(117, 116, 116, 0.5);
     background-color: #e9e9e9;
+}
+
+.back-button a {
+    color: black;
+    text-decoration: none;
 }
