디자인 변경

--- a/src/main/resources/templates/payment/paymentOption.html
+++ b/src/main/resources/templates/payment/paymentOption.html
@@ -26,17 +26,21 @@
             </div>
             <div class="payment">
                 <div class="credit-card">
-                    <i class="fa-regular fa-credit-card icon"></i>
-                    <span class="payment-content">카드 결제</span>
+                    <div class="credit-card-icon"><i class="fa-regular fa-credit-card icon"></i></div>
+                    <div class="credit-card-content"><span class="payment-content">카드 결제</span></div>
+
+
                 </div>
                 <div class="cash">
-                    <i class="fa-solid fa-coins icon"></i>
-                    <span class="payment-content">현금 결제</span>
+                    <div class="cash-icon"><i class="fa-solid fa-coins icon"></i></div>
+                    <div class="cash-content"><span class="payment-content">현금 결제</span></div>
+
+
                 </div>
             </div>
-            <div class="backButton">
+            <div class="back-button">
                 <!-- 뒤로가기를 눌렀을 떄 메뉴를 살릴 것인가? 전부 지울것인가? -->
-                <a href="">뒤로 가기</a>
+                <a href="/main">뒤로 가기</a>
             </div>
         </div>
 
